fix (module-info): reposition mod info sidebar on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -447,7 +447,6 @@ a:hover {
 
 .add-rm-mod-btn {
   margin-right: 0;
-  /* width: 99px; */
 }
 
 .saved-removed-text {
@@ -547,9 +546,19 @@ h4.filter-label {
 
 @media (max-width: 768px) {
   .module-detail-container {
-    padding-top: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
   }
 }
+
+@media (max-width: 768px) {
+  .module-detail-container > .download-btn {
+    margin: auto;
+  }
+}
+
 /* module info sidebar */
 
 .module-info-side {
@@ -558,16 +567,6 @@ h4.filter-label {
   margin: 0 auto 0 3rem;
   min-width: max-content;
   gap: 1%;
-}
-
-@media (max-width: 768px) {
-  .module-info-side {
-    display: none;
-    margin-right: 0;
-  }
-  h1 {
-    font-size: 1.5rem;
-  }
 }
 
 .module-info-container {
@@ -613,7 +612,6 @@ h4.filter-label {
 .spacer {
   flex: 1;
 }
-
 
 /* drawer toggle button */
 
